// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 117856,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 61311,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 120020,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 80640,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 63475,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 149703,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 57374,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 151867,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 96174,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 59538,
}
`;

exports[`KeeperRewards set rewards delay succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32777,
}
`;

exports[`KeeperRewards set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 114860,
}
`;

exports[`KeeperRewards set rewards root succeeds 2`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 117672,
}
`;
